[package]
name = "vowpalwabbit-sys"
version = "8.8.0"
authors = ["Jack Gerrits <jack@jackgerrits.com>"]
edition = "2018"
links = "libvw_c_wrapper"
repository = "https://github.com/jackgerrits/vowpalwabbit-sys-rs"
license = "MIT"
description = "Rust bindings for VowpalWabbit"
readme = "readme.md"
keywords = ["vowpal wabbit", "vowpal-wabbit", "machine learning", "reinforcement learning"]

[build-dependencies]
bindgen = "0.52.0"
cmake = "0.1.42"