[package]
name = "vw-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vowpalwabbit = { path = "../vowpalwabbit" }
rayon = "1.5.3"
flume = "0.10.14"
shlex = "1.1.0"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.65"
